# uniemu

./: .gitignore  Cargo.toml  README.md  build.rs
shaders/: compose.comp  text.frag  text.vert
shaders/compiled/: compose_comp.spv  text_frag.spv  text_vert.spv
src/: config.rs  logging.rs  main.rs  overlay.rs  profiler.rs  settings_file.rs  sound.rs
src/components/: drive.rs  eeprom.rs  filesystem.rs  gpu.rs  keyboard.rs  mod.rs  screen.rs
src/display/: font.rs  mod.rs  palette.rs  text_buffer.rs
src/fs/: mod.rs
src/lua/: ffi.rs  host.rs  mod.rs  state.rs
src/machine/: mod.rs  persistence.rs  signal.rs
src/render/: debug_bar.rs  direct.rs  indirect.rs  mod.rs  pipeline.rs  software.rs  vulkan_ctx.rs
