[package]
name = "uniemu"
version = "0.1.0"
edition = "2024"

description = "OpenComputers emulator with dual INDIRECT/DIRECT Vulkan rendering"

[dependencies]
ash = "0.38.0"
ash-window = "0.13"
winit = "0.30"
raw-window-handle = "0.6"
mlua = { version = "0.10", features = ["lua54", "vendored"] }

[build-dependencies]
cc = "1.2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
