[package]
name = "uniemu"
version = "0.1.0"
edition = "2024"

description = "OpenComputers emulator with dual INDIRECT/DIRECT Vulkan rendering"

[features]
default = ["sound"]
sound = ["dep:cpal", "dep:lewton"]

[dependencies]
ash = "0.38.0"
ash-window = "0.13"
winit = "0.30"
raw-window-handle = "0.6"
softbuffer = "0.4"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
cpal = { version = "0.17.3", optional = true }
lewton = { version = "0.10", optional = true }
base64 = "0.22.1"
flate2 = "1.1.9"
log = "0.4.29"
env_logger = "0.11.10"

[build-dependencies]
cc = "1.2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
flate2 = "1"

[profile.dev]
opt-level = 1
